--- a/GUI/BDBSM_WindowsApp/BDBSM_WindowsApp/Views/InfoDialog.xaml
+++ b/GUI/BDBSM_WindowsApp/BDBSM_WindowsApp/Views/InfoDialog.xaml
@@ -84,8 +84,8 @@
                    HorizontalAlignment="Center"
                    Margin="0,0,0,65"
                    FontSize="14"/>
-        <TextBox Style="{DynamicResource MaterialDesignTextBox}"
-                 Text="{Binding InputText}"
+        <TextBox x:Name="InputText"
+                 Style="{DynamicResource MaterialDesignTextBox}"
                  Grid.Row="1" 
                  Visibility="{Binding TextBoxVisibility}"
                  HorizontalAlignment="Center"
@@ -94,8 +94,15 @@
                  Background="WhiteSmoke"
                  TextAlignment="Center"
                  FontSize="14"
-                 Height="Auto"
-                 />
+                 Height="Auto">
+            <TextBox.Text>
+                <Binding Path="InputText">
+                    <Binding.ValidationRules>
+                        <ExceptionValidationRule/>
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
 
         <StackPanel Grid.Row="1" 
                     Margin="0,0,5,5" 
