--- a/GUI/BDBSM_WindowsApp/BDBSM_WindowsApp/Views/MainWindow.xaml
+++ b/GUI/BDBSM_WindowsApp/BDBSM_WindowsApp/Views/MainWindow.xaml
@@ -199,8 +199,7 @@
         </Grid>
         <DataGrid Grid.Row="2"
                   Grid.Column="1"
-                  ItemsSource="{Binding ObservableCollection[0]}" >
-
-        </DataGrid>
+                  ItemsSource="{Binding DataTable}"
+                  AutoGenerateColumns="True"/>
     </Grid>
 </Window>
