--- a/GUI/BDBSM_WindowsApp/BDBSM_WindowsApp/Views/MainWindow.xaml
+++ b/GUI/BDBSM_WindowsApp/BDBSM_WindowsApp/Views/MainWindow.xaml
@@ -5,8 +5,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         xmlns:viewmodel="clr-namespace:BDBSM_WindowsApp.ViewModels"
-        xmlns:col="clr-namespace:System.Collections;assembly=mscorlib"
-        xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes" 
         mc:Ignorable="d"
         Title="BDBSM Studio" Height="450" Width="800"
         WindowStyle="None"
@@ -140,7 +138,8 @@
                 </MenuItem>
                 <MenuItem Header="Таблицы" Height="30">
                     <MenuItem Header="Создать"  Height="30"
-                              Command="{Binding CreateNewTableCommand}" />
+                              Command="{Binding CreateNewTableCommand}" 
+                              CommandParameter="{Binding Tables}"/>
                 </MenuItem>
                 <MenuItem Header="Связи" Height="30">
 
@@ -154,8 +153,9 @@
         <Grid Grid.Row="2" 
               Background="#9ba4b4">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="24*"/>
-                <ColumnDefinition Width="151*"/>
+                <ColumnDefinition Width="48*"/>
+                <ColumnDefinition Width="67*"/>
+                <ColumnDefinition Width="235*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="40"/>
@@ -167,24 +167,26 @@
                      Text="{Binding DatabaseName, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
                      HorizontalAlignment="Center"
                      VerticalAlignment="Center" 
-                     Margin="10" 
+                     Margin="10,5" 
                      Height="30" 
                      Width="330" 
-                     Grid.ColumnSpan="2" />
+                     Grid.ColumnSpan="3" />
 
             <TextBox Grid.Row="1" 
                      Text="{Binding FilterText, UpdateSourceTrigger=PropertyChanged}" 
                      Height="25" 
                      Background="WhiteSmoke"
                      TextAlignment="Left"
+                     Padding="5,4,5,0"
                      VerticalAlignment="Bottom" 
-                     Margin="1,0,0,0" Grid.ColumnSpan="2"/>
+                     Margin="5,1,5,1" 
+                     Grid.ColumnSpan="3"/>
 
             <ListBox Margin="1,0,0,0" 
                      Grid.Row="2" 
-                     ItemsSource="{Binding Tables, UpdateSourceTrigger=PropertyChanged}" 
+                     ItemsSource="{Binding Tables}" 
                      SelectedItem="{Binding SelectedTable}"
-                     DisplayMemberPath="Name" Grid.ColumnSpan="2">
+                     DisplayMemberPath="Name" Grid.ColumnSpan="3">
 
                 <ListBox.ContextMenu>
                     <ContextMenu  DataContext="{Binding RelativeSource={RelativeSource Self}, Path=PlacementTarget.DataContext}">
@@ -200,6 +202,36 @@
         <DataGrid Grid.Row="2"
                   Grid.Column="1"
                   ItemsSource="{Binding DataTable}"
-                  AutoGenerateColumns="True"/>
+                  AutoGenerateColumns="True"
+                  BorderBrush="White">
+            <DataGrid.ColumnHeaderStyle>
+                <Style TargetType="DataGridColumnHeader" 
+                       BasedOn="{StaticResource MaterialDesignDataGridColumnHeader}">
+                    <Setter Property="FontSize" Value="21" />
+                    <Setter Property="BorderThickness" Value="0.7" />
+                    <Setter Property="BorderBrush" Value="#394867" />
+                </Style>
+            </DataGrid.ColumnHeaderStyle>
+            <DataGrid.CellStyle>
+                <Style TargetType="DataGridCell">
+                    <Setter Property="BorderBrush" Value="#14274e" />
+                    <Setter Property="BorderThickness" Value="0.5" />
+                    <Setter Property="FontSize" Value="20" />
+                    <Setter Property="HorizontalContentAlignment" Value="Center" />
+                </Style>
+            </DataGrid.CellStyle>
+            <DataGrid.ContextMenu>
+                <ContextMenu DataContext="{Binding RelativeSource={RelativeSource Self}, Path=PlacementTarget.DataContext}">
+                    <MenuItem Header="Добавить колонку"
+                              Command="{Binding AddColumnCommand}"
+                              CommandParameter="{Binding SelectedTable}"/>
+                    <MenuItem Header="Сохранить" 
+                              Command="{Binding SaveCurrentTableCommand}"
+                              CommandParameter="{Binding SelectedTable}"/>
+                    
+                </ContextMenu>
+            </DataGrid.ContextMenu>
+        </DataGrid>
+
     </Grid>
 </Window>
